[gd_scene load_steps=10 format=3 uid="uid://diu1ysasq12kx"]

[ext_resource type="Script" path="res://Scripts/Battle/battleUI.gd" id="1_a7r6k"]
[ext_resource type="Texture2D" uid="uid://cql7qwp47gn1y" path="res://assets/battle_ui/button_on_cooldown.png" id="2_0wo6v"]
[ext_resource type="Texture2D" uid="uid://vkrwecb87kyd" path="res://assets/battle_ui/PLAYER 1.png" id="2_notfm"]
[ext_resource type="Texture2D" uid="uid://d2jotnqedvnf8" path="res://assets/character_selection_assets/charandstickers/beaver normal.png" id="3_66qdw"]
[ext_resource type="Texture2D" uid="uid://cgm4ibgvo8iot" path="res://assets/battle_ui/button.png" id="3_b43q0"]
[ext_resource type="Texture2D" uid="uid://dn0ahrh5bht02" path="res://assets/character_selection_assets/charandstickers/cat normal.png" id="4_44ls0"]
[ext_resource type="Texture2D" uid="uid://bm2s2cjhj45hu" path="res://assets/battle_ui/gauge_on_cooldown.png" id="4_qvynb"]
[ext_resource type="Texture2D" uid="uid://cxgh3nkwn8xrj" path="res://assets/battle_ui/PLAYER 2.png" id="4_yr7md"]
[ext_resource type="Texture2D" uid="uid://2pit0m1t04k4" path="res://assets/battle_ui/gauge.png" id="5_wtegq"]

[node name="BattleUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a7r6k")

[node name="Player1" type="Control" parent="."]
visible = false
layout_mode = 2
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Bomb" type="TextureProgressBar" parent="Player1"]
layout_mode = 2
offset_left = 160.0
offset_top = 80.0
offset_right = 240.0
offset_bottom = 160.0
texture_under = ExtResource("2_0wo6v")
texture_progress = ExtResource("3_b43q0")

[node name="BombCooldown" type="Timer" parent="Player1/Bomb"]
wait_time = 3.0
one_shot = true

[node name="Build" type="TextureProgressBar" parent="Player1"]
layout_mode = 2
offset_left = 260.0
offset_top = 80.0
offset_right = 340.0
offset_bottom = 160.0
pivot_offset = Vector2(-1, -2)
texture_under = ExtResource("2_0wo6v")
texture_progress = ExtResource("3_b43q0")

[node name="BuildCooldown" type="Timer" parent="Player1/Build"]
wait_time = 10.0
one_shot = true
autostart = true

[node name="Run" type="TextureProgressBar" parent="Player1"]
layout_mode = 2
offset_left = 20.0
offset_top = 180.0
offset_right = 340.0
offset_bottom = 260.0
texture_under = ExtResource("4_qvynb")
texture_progress = ExtResource("5_wtegq")

[node name="RunRegen" type="Timer" parent="Player1/Run"]
autostart = true

[node name="Frame1" type="Sprite2D" parent="Player1"]
position = Vector2(80, 100)
texture = ExtResource("2_notfm")

[node name="P1" type="Sprite2D" parent="Player1/Frame1"]
texture = ExtResource("3_66qdw")

[node name="Player2" type="Control" parent="."]
visible = false
layout_mode = 2
anchors_preset = 0
offset_left = 1920.0
offset_right = 1960.0
offset_bottom = 40.0

[node name="Bomb" type="TextureProgressBar" parent="Player2"]
layout_mode = 2
offset_left = -240.0
offset_top = 80.0
offset_right = -160.0
offset_bottom = 160.0
pivot_offset = Vector2(80, 0)
texture_under = ExtResource("2_0wo6v")
texture_progress = ExtResource("3_b43q0")

[node name="BombCooldown" type="Timer" parent="Player2/Bomb"]
wait_time = 3.0
one_shot = true

[node name="Build" type="TextureProgressBar" parent="Player2"]
layout_mode = 2
offset_left = -340.0
offset_top = 80.0
offset_right = -260.0
offset_bottom = 160.0
pivot_offset = Vector2(80, 0)
texture_under = ExtResource("2_0wo6v")
texture_progress = ExtResource("3_b43q0")

[node name="BuildCooldown" type="Timer" parent="Player2/Build"]
wait_time = 10.0
one_shot = true
autostart = true

[node name="Run" type="TextureProgressBar" parent="Player2"]
layout_mode = 2
offset_left = -340.0
offset_top = 180.0
offset_right = -20.0
offset_bottom = 260.0
pivot_offset = Vector2(320, 0)
texture_under = ExtResource("4_qvynb")
texture_progress = ExtResource("5_wtegq")

[node name="RunRegen" type="Timer" parent="Player2/Run"]
autostart = true

[node name="Frame2" type="Sprite2D" parent="Player2"]
position = Vector2(-80, 100)
texture = ExtResource("4_yr7md")

[node name="P2" type="Sprite2D" parent="Player2/Frame2"]
texture = ExtResource("4_44ls0")

[node name="Player3" type="Control" parent="."]
visible = false
layout_mode = 2
anchors_preset = 0
offset_left = 1920.0
offset_top = 1080.0
offset_right = 1960.0
offset_bottom = 1120.0

[node name="Bomb" type="TextureProgressBar" parent="Player3"]
layout_mode = 2
offset_left = -240.0
offset_top = -200.0
offset_right = -160.0
offset_bottom = -120.0
pivot_offset = Vector2(80, 0)
texture_under = ExtResource("2_0wo6v")
texture_progress = ExtResource("3_b43q0")

[node name="BombCooldown" type="Timer" parent="Player3/Bomb"]
wait_time = 3.0
one_shot = true

[node name="Build" type="TextureProgressBar" parent="Player3"]
layout_mode = 2
offset_left = -340.0
offset_top = -200.0
offset_right = -260.0
offset_bottom = -120.0
pivot_offset = Vector2(80, 0)
texture_under = ExtResource("2_0wo6v")
texture_progress = ExtResource("3_b43q0")

[node name="BuildCooldown" type="Timer" parent="Player3/Build"]
wait_time = 10.0
one_shot = true
autostart = true

[node name="Run" type="TextureProgressBar" parent="Player3"]
layout_mode = 2
offset_left = -340.0
offset_top = -100.0
offset_right = -20.0
offset_bottom = -20.0
pivot_offset = Vector2(320, 0)
texture_under = ExtResource("4_qvynb")
texture_progress = ExtResource("5_wtegq")

[node name="RunRegen" type="Timer" parent="Player3/Run"]
autostart = true

[node name="Frame3" type="Sprite2D" parent="Player3"]
position = Vector2(-80, -180)
texture = ExtResource("4_yr7md")

[node name="P3" type="Sprite2D" parent="Player3/Frame3"]
texture = ExtResource("4_44ls0")

[node name="Player4" type="Control" parent="."]
visible = false
layout_mode = 2
anchors_preset = 0
offset_top = 800.0
offset_right = 40.0
offset_bottom = 840.0

[node name="Bomb" type="TextureProgressBar" parent="Player4"]
layout_mode = 2
offset_left = 160.0
offset_top = 80.0
offset_right = 240.0
offset_bottom = 160.0
texture_under = ExtResource("2_0wo6v")
texture_progress = ExtResource("3_b43q0")

[node name="BombCooldown" type="Timer" parent="Player4/Bomb"]
wait_time = 3.0
one_shot = true

[node name="Build" type="TextureProgressBar" parent="Player4"]
layout_mode = 2
offset_left = 260.0
offset_top = 80.0
offset_right = 340.0
offset_bottom = 160.0
pivot_offset = Vector2(-1, -2)
texture_under = ExtResource("2_0wo6v")
texture_progress = ExtResource("3_b43q0")

[node name="BuildCooldown" type="Timer" parent="Player4/Build"]
wait_time = 10.0
one_shot = true
autostart = true

[node name="Run" type="TextureProgressBar" parent="Player4"]
layout_mode = 2
offset_left = 20.0
offset_top = 180.0
offset_right = 340.0
offset_bottom = 260.0
texture_under = ExtResource("4_qvynb")
texture_progress = ExtResource("5_wtegq")

[node name="RunRegen" type="Timer" parent="Player4/Run"]
autostart = true

[node name="Frame4" type="Sprite2D" parent="Player4"]
position = Vector2(80, 100)
texture = ExtResource("4_yr7md")

[node name="P4" type="Sprite2D" parent="Player4/Frame4"]
texture = ExtResource("4_44ls0")

[connection signal="timeout" from="Player1/Bomb/BombCooldown" to="." method="_on_bomb1_cooldown_timeout"]
[connection signal="timeout" from="Player1/Build/BuildCooldown" to="." method="_on_build1_cooldown_timeout"]
[connection signal="timeout" from="Player1/Run/RunRegen" to="." method="_on_run1_regen_timeout"]
[connection signal="timeout" from="Player2/Bomb/BombCooldown" to="." method="_on_bomb2_cooldown_timeout"]
[connection signal="timeout" from="Player2/Build/BuildCooldown" to="." method="_on_build2_cooldown_timeout"]
[connection signal="timeout" from="Player2/Run/RunRegen" to="." method="_on_run2_regen_timeout"]
[connection signal="timeout" from="Player3/Bomb/BombCooldown" to="." method="_on_bomb3_cooldown_timeout"]
[connection signal="timeout" from="Player3/Build/BuildCooldown" to="." method="_on_build3_cooldown_timeout"]
[connection signal="timeout" from="Player3/Run/RunRegen" to="." method="_on_run3_regen_timeout"]
[connection signal="timeout" from="Player4/Bomb/BombCooldown" to="." method="_on_bomb4_cooldown_timeout"]
[connection signal="timeout" from="Player4/Build/BuildCooldown" to="." method="_on_build4_cooldown_timeout"]
[connection signal="timeout" from="Player4/Run/RunRegen" to="." method="_on_run4_regen_timeout"]
